# exact

./: INSTALL  Makefile.in  NEWS  README  apconf.c  apconf.h  auth.c  auth.h  authenticated  autogen.sh  conffile.c  conffile.h  config.h  config.h.in  configure.ac  daemon.c  daemon.h  debugmsg.c  debugmsg.h  exact-servers.conf  exact.8.in  exact.c  exact.conf  exact.conf.5  exact.conf.5.in  exact.conf.in  exact.conf.in.cyrus  html.py  logger.c  logger.h  match.c  match.h  mkinstalldirs  regress  tail.c  tail.h  tarball  td1-1  td1-2  td2-2  (+4 more)
