# Process this file with autoconf to produce a configure script.
AC_INIT(exact, 1.00, doug@pigeonhold.com)
AC_CONFIG_SRCDIR([tail.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

AC_TYPE_SIZE_T
AC_C_CONST
AC_TYPE_SIGNAL

# Checks for library functions.

AC_FUNC_FORK
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([regcomp])
AC_CHECK_FUNCS([alarm])
AC_FUNC_MALLOC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
